# jailbreaking-experiments

./: .gitignore  README.md  pyproject.toml
examples/: h100.py  iterative-optimized.py  iterative.py  iterative_old.py  simple.py
