[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanogcg"
version = "0.1"
authors = [
    { name="Luis Cosio", email="luisalfonsocosioizcapa@gmail.com" },
]
description = "A lightweight implementation of the GCG algorithm"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "transformers>=4.4",
    "pandas",
    "pydantic",
    "openai",
]

[tool.setuptools]
packages = ["nanogcg"]

[project.urls]
Homepage = "https://github.com/luiscosio/nanoGCG"
Issues = "https://github.com/luiscosio/nanoGCG/issues"